[tool.poetry]
name = "policy-dbtools"
version = "0.2.0"
description = "ONE Policy team database tools"
authors = ["Luca Picci <luca.picci@one.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "policy_dbtools"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2"
pymongo = "^4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
